--- a/merchandise.html
+++ b/merchandise.html
@@ -496,6 +496,76 @@
             from { opacity: 0; transform: translateY(-10px); }
             to { opacity: 1; transform: translateY(0); }
         }
+
+        /* Showcase section styles */
+        .artwork-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2rem;
+            margin: 3rem 0;
+        }
+
+        .artwork-item {
+            position: relative;
+            border-radius: 12px;
+            overflow: hidden;
+            background: white;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .artwork-item:hover {
+            transform: translateY(-5px);
+        }
+
+        .artwork-item img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            display: block;
+        }
+
+        .artwork-label {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 1rem;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            font-size: 0.875rem;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .artwork-item.revealed .artwork-label {
+            opacity: 1;
+        }
+
+        .label-icon {
+            font-size: 1.25rem;
+        }
+
+        .showcase-cta {
+            text-align: center;
+            margin-top: 2rem;
+        }
+
+        @media (max-width: 768px) {
+            .artwork-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 1rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .artwork-grid {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body>
@@ -512,7 +582,6 @@
                     <li><a href="merchandise.html" class="nav-link">Shop</a></li>
                 </ul>
                 <div class="nav-cta">
-                    <button class="btn btn-secondary" onclick="openArtistModal(); trackButtonClick('nav_apply_model');">Apply to Train Model</button>
                     <button class="btn btn-primary" onclick="window.open('https://tally.so/r/n9g6JG', '_blank'); trackButtonClick('nav_join_waitlist');">Join Waitlist</button>
                 </div>
             </nav>
