--- a/merchandise.html
+++ b/merchandise.html
@@ -575,9 +575,11 @@
             <a href="index.html" class="logo">MuseAI</a>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li><a href="index.html#value-prop" class="nav-link">Features</a></li>
+                    <li><a href="index.html#ai-comparison" class="nav-link">Problem</a></li>
+                    <li><a href="index.html#value-prop" class="nav-link">Why MuseAI</a></li>
                     <li><a href="index.html#how-it-works" class="nav-link">How It Works</a></li>
-                    <li><a href="index.html#showcase" class="nav-link">Showcase</a></li>
+                    <li><a href="index.html#artwork-showcase" class="nav-link">Artist Showcase</a></li>
+                    <li><a href="index.html#use-cases" class="nav-link">Use Cases</a></li>
                     <li><a href="index.html#testimonials" class="nav-link">Testimonials</a></li>
                     <li><a href="merchandise.html" class="nav-link">Shop</a></li>
                 </ul>
@@ -777,9 +779,10 @@
                 <div class="footer-links">
                     <h4>Product</h4>
                     <ul>
-                        <li><a href="index.html#value-prop">Features</a></li>
+                        <li><a href="index.html#value-prop">Why MuseAI</a></li>
                         <li><a href="index.html#how-it-works">How It Works</a></li>
-                        <li><a href="index.html#showcase">Showcase</a></li>
+                        <li><a href="index.html#artwork-showcase">Artist Showcase</a></li>
+                        <li><a href="index.html#use-cases">Use Cases</a></li>
                         <li><a href="merchandise.html">Shop</a></li>
                     </ul>
                 </div>
