--- a/index.html
+++ b/index.html
@@ -3222,15 +3222,18 @@
                     </div>
                 </div>
                 <div class="use-case-layout use-case-1-1">
-                    <div class="video-container video-1-1">
-                        <img src="img/services/services_placeholder.jpg" alt="Product Packaging Coming Soon" style="width:100%;height:100%;object-fit:cover;display:block;background:#f3f3f3;">
-                        <div class="video-overlay" style="opacity:1;justify-content:center;align-items:center;">
-                            <div class="play-icon" style="font-size:1.2rem;background:#eee;color:#888;box-shadow:none;">Coming Soon</div>
+                    <div class="video-container video-1-1" onclick="openVideoModal('images/Mockups/ProductPackage.mp4')">
+                        <video autoplay muted loop playsinline>
+                            <source src="images/Mockups/ProductPackage.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                        <div class="video-overlay">
+                            <div class="play-icon">▶</div>
                         </div>
                     </div>
                     <div class="use-case-content">
-                        <h3>Product Packaging (Coming Soon)</h3>
-                        <p>Showcase your products with custom packaging designs. Available soon!</p>
+                        <h3>Product Packaging</h3>
+                        <p>Showcase your products with custom packaging designs that perfectly match your brand aesthetic.</p>
                     </div>
                 </div>
             </div>
