--- a/merchandise.html
+++ b/merchandise.html
@@ -580,13 +580,10 @@
             </div>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li><a href="index.html#ai-comparison" class="nav-link" onclick="closeMobileMenu()">Problem</a></li>
                     <li><a href="index.html#value-prop" class="nav-link" onclick="closeMobileMenu()">Why MuseAI</a></li>
-                    <li><a href="index.html#how-it-works" class="nav-link" onclick="closeMobileMenu()">How It Works</a></li>
-                    <li><a href="index.html#artwork-showcase" class="nav-link" onclick="closeMobileMenu()">Artist Showcase</a></li>
                     <li><a href="index.html#use-cases" class="nav-link" onclick="closeMobileMenu()">Use Cases</a></li>
-                    <li><a href="index.html#testimonials" class="nav-link" onclick="closeMobileMenu()">Testimonials</a></li>
                     <li><a href="merchandise.html" class="nav-link" onclick="closeMobileMenu()">Shop</a></li>
+                    <li><a href="demo.html" class="nav-link" onclick="closeMobileMenu()">Demo</a></li>
                 </ul>
                 <div class="nav-cta">
                     <button class="btn btn-primary" onclick="window.open('https://tally.so/r/n9g6JG', '_blank'); trackButtonClick('nav_join_waitlist'); closeMobileMenu();">Join Waitlist</button>
